--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="footer">
         <div class="webgl-logo"></div>
         <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-        <div class="title">左键改变刀的方向，空格切割</div>
+        <div class="title">左键拖动改变刀的方向，按下空格键切割</div>
       </div>
     </div>
   </body>
